--- a/PurrfectMatch/DBapplication/DBapplication.csproj
+++ b/PurrfectMatch/DBapplication/DBapplication.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -66,6 +67,12 @@
     </Compile>
     <Compile Include="AdminAddDeleteCenter.Designer.cs">
       <DependentUpon>AdminAddDeleteCenter.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdoptedPets.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdoptedPets.Designer.cs">
+      <DependentUpon>AdoptedPets.cs</DependentUpon>
     </Compile>
     <Compile Include="ChangePassowrd.cs">
       <SubType>Form</SubType>
@@ -98,6 +105,18 @@
     </Compile>
     <Compile Include="PetsViewManager.Designer.cs">
       <DependentUpon>PetsViewManager.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Quiz.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Quiz.Designer.cs">
+      <DependentUpon>Quiz.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vet.Designer.cs">
+      <DependentUpon>Vet.cs</DependentUpon>
     </Compile>
     <Compile Include="Vets.cs">
       <SubType>Form</SubType>
