--- a/PurrfectMatch/DBapplication/DBapplication.csproj
+++ b/PurrfectMatch/DBapplication/DBapplication.csproj
@@ -118,6 +118,12 @@
     <Compile Include="Vet.Designer.cs">
       <DependentUpon>Vet.cs</DependentUpon>
     </Compile>
+    <Compile Include="Centers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Centers.Designer.cs">
+      <DependentUpon>Centers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vets.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -173,6 +179,18 @@
     <Compile Include="ViewAndEditPetManager.Designer.cs">
       <DependentUpon>ViewAndEditPetManager.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewCenter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewCenter.Designer.cs">
+      <DependentUpon>ViewCenter.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewVet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewVet.Designer.cs">
+      <DependentUpon>ViewVet.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewProduct.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -203,6 +221,9 @@
     <EmbeddedResource Include="MyPetsList.resx">
       <DependentUpon>MyPetsList.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Centers.resx">
+      <DependentUpon>Centers.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vets.resx">
       <DependentUpon>Vets.cs</DependentUpon>
     </EmbeddedResource>
@@ -228,6 +249,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyPet.resx">
       <DependentUpon>MyPet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewCenter.resx">
+      <DependentUpon>ViewCenter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewVet.resx">
+      <DependentUpon>ViewVet.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewProduct.resx">
       <DependentUpon>ViewProduct.cs</DependentUpon>
@@ -305,6 +332,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Mediamodifier-Design-Template.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Toy Mouse.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Dr.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
